src/test/ui/error-codes/E0259.stderr
error[E0259]: the name `alloc` is defined multiple times
  --> $DIR/E0259.rs:16:1
   |
14 | extern crate alloc;
   | ------------------- previous import of the extern crate `alloc` here
15 | 
16 | extern crate libc as alloc;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `alloc` reimported here
   | You can use `as` to change the binding name of the import
   |
   = note: `alloc` must be defined only once in the type namespace of this module

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0259"
